--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
@@ -37,6 +37,10 @@ select {
 	}
 }
 
+textarea {
+	display: block;
+}
+
 input[type='checkbox'], input[type='radio']  {
 	position: relative;
 	top: 2px;
