--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
@@ -163,6 +163,9 @@ fieldset:not(.polls) {
 		dd {
 			margin: 0 0 $ffs $ffi-01;
 			border: 1px solid red;
+			label {
+				display: inline-block;
+			}
 			&:last-child {
 				margin-bottom: 0;
 			}
