--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
@@ -161,7 +161,7 @@
 		margin: 0 -2.5px;
 		li {
 			padding: 1.5px 2.5px;
-			&, a, i {
+			&, & > a, & > i {
 				vertical-align: middle;
 			}
 			&, a {
