--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
@@ -61,6 +61,8 @@ $icon-file-o: \f016;
 $icon-gplus: \f0d5;
 $icon-heart: \f004;
 $icon-inbox: \f01c;
+$icon-minus: \f068;
+$icon-plus: \f067;
 $icon-twitter: \f099;
 $icon-search: \f002;
 $icon-search-minus: \f010;
