--- a/khyeras/_dev/styles/khyeras_v1/template/index_body.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/index_body.html
@@ -15,18 +15,29 @@
 <!-- IF not S_USER_LOGGED_IN and not S_IS_BOT -->
 <div class="panel">
 	<div class="inner">
-		<form method="post" action="{S_LOGIN_ACTION}" class="headerspace">
+		<form method="post" action="{S_LOGIN_ACTION}" id="login" class="headerspace">
 		<h3><a href="{U_LOGIN_LOGOUT}">{L_LOGIN_LOGOUT}</a><!-- IF S_REGISTER_ENABLED -->&nbsp; &bull; &nbsp;<a href="{U_REGISTER}">{L_REGISTER}</a><!-- ENDIF --></h3>
-			<fieldset class="quick-login">
-				<label for="username"><span>{L_USERNAME}{L_COLON}</span> <input type="text" tabindex="1" name="username" id="username" size="10" class="inputbox" title="{L_USERNAME}" /></label>
-				<label for="password"><span>{L_PASSWORD}{L_COLON}</span> <input type="password" tabindex="2" name="password" id="password" size="10" class="inputbox" title="{L_PASSWORD}" autocomplete="off" /></label>
-				<!-- IF U_SEND_PASSWORD -->
-					<a href="{U_SEND_PASSWORD}">{L_FORGOT_PASS}</a>
-				<!-- ENDIF -->
+			<fieldset class="fields1 quick-login">
+				<dl>
+					<dt><label for="username">{L_USERNAME}{L_COLON}</label></dt>
+					<dd><input type="text" tabindex="1" name="username" id="username" size="10" class="inputbox" title="{L_USERNAME}" /></dd>
+				</dl>
+				<dl>
+					<dt><label for="password">{L_PASSWORD}{L_COLON}</label></dt>
+					<dd><input type="password" tabindex="2" name="password" id="password" size="10" class="inputbox" title="{L_PASSWORD}" autocomplete="off" /></dd>
+					<!-- IF U_SEND_PASSWORD -->
+						<dd><a href="{U_SEND_PASSWORD}">{L_FORGOT_PASS}</a></dd>
+					<!-- ENDIF -->
+				</dl>
 				<!-- IF S_AUTOLOGIN_ENABLED -->
-					<span class="responsive-hide">|</span> <label for="autologin">{L_LOG_ME_IN} <input type="checkbox" tabindex="4" name="autologin" id="autologin" /></label>
+					<dl>
+						<dd><label for="autologin"><input type="checkbox" tabindex="4" name="autologin" id="autologin" /> {L_LOG_ME_IN}</label></dd>
+					</dl>
 				<!-- ENDIF -->
-				<input type="submit" tabindex="5" name="login" value="{L_LOGIN}" class="button2" />
+				<dl>
+					<dt>&nbsp;</dt>
+					<dd><input type="submit" tabindex="5" name="login" value="{L_LOGIN}" class="button2" /></dd>
+				</dl>
 				{S_LOGIN_REDIRECT}
 			</fieldset>
 		</form>
