--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_form-fields.scss
@@ -137,6 +137,7 @@ fieldset.submit-buttons {
 
 fieldset:not(.polls) {
 	dl:not(.pmlist) {
+		// Always keep clearfix to account for weird margin collapse spacing
 		@include clearfix('&');
 		margin: 0 -10px 20px -10px;
 		.inputbox, select, label {
